<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aquastar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="version">Vesion</string>
    <string name="devloped_by">Devleoped By Ginfoclique</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="today">Today</string>
    <string name="total_customer">Total Customer</string>
    <string name="total_service">Total Service</string>
    <string name="total_issue">Total Issue</string>
    <string name="total_completed">Total Completed</string>
    <string name="total_pending">Total Pending</string>
    <string name="customer_list">Customer List</string>
    <string name="service_list">Service List</string>
    <string name="issue_list">Issue List</string>
    <string name="customer_name">Vinoth Kumar (1450)</string>
    <string name="address1">1/1 VSV Kovil Str</string>
    <string name="address2">Jeyam building</string>
    <string name="city">Mylapore</string>
    <string name="phone_no">9840888322</string>
    <string name="product_name">Aqua Tank (A152)</string>
    <string name="product_info">Pur Date:15.02.2013 | Repl Date:15.02.2014 | Issue:2</string>
    <string name="model_name">Model Name</string>
    <string name="date">Date</string>
    <string name="date_format">DD/MM/YYY</string>
    <string name="issues">Issues</string>
    <string name="issue_id">(3004)</string>
    <string name="Issue_label">I:</string>
    <string name="status">Status</string>
    <string name="not_started">Not Started</string>
    <string name="search">Search</string>


</resources>
